--- a/login.html
+++ b/login.html
@@ -13,11 +13,12 @@
     <div id="errorFeed">
       <form action="" id="formSubmitLogin">
           <h1>Login</h1>
-          <label for="usernameLogin">Username</label>
-          <input type="text" id="usernameLogin" value="kminchelle" readonly>
+          <label for="emailLogin">Email</label>
+          <input type="emal" id="emailLogin" required>
           <label for="passwordLogin">Password</label>
-          <input type="password" id="passwordLogin" value="0lelplR" readonly>
+          <input type="password" id="passwordLogin" required>
           <button type="submit">Submit</button>
+          <a href="./index.html" style="color: white;margin: 5px;">Not registerd? Sign up</a>
         </form>
       </div>
     <script defer src="./auth/login.js"></script>
