--- a/index.html
+++ b/index.html
@@ -16,12 +16,15 @@
             
             <h1>Register</h1>
             <label for="username">Username</label>
-            <input type="text" id="username" value="kminchelle" readonly />
+            <input type="text" id="username"  required/>
+            <label for="email">Email</label>
+            <input type="email" id="email"  required/>
             <label for="password">Password</label>
-            <input type="password" id="password" value="0lelplR" readonly />
+            <input type="password" id="password" required/>
             <label for="password">Confirm Password</label>
-            <input type="password" id="confirmPassword" value="0lelplR" readonly />
+            <input type="password" id="confirmPassword"  required/>
             <button type="submit">Submit</button>
+            <a href="./login.html" style="color: white;margin: 5px;">Alredy registerd? Sign in</a>
           </form>
         </div>
 
