--- a/login.html
+++ b/login.html
@@ -13,10 +13,10 @@
     <div id="errorFeed">
       <form action="" id="formSubmitLogin">
           <h1>Login</h1>
-          <label for="emailLogin">Email</label>
-          <input type="emal" id="emailLogin" required>
-          <label for="passwordLogin">Password</label>
-          <input type="password" id="passwordLogin" required>
+          <label for="emailLogin"></label>
+          <input type="emal" id="emailLogin" required placeholder="Email">
+          <label for="passwordLogin"></label>
+          <input type="password" id="passwordLogin" required placeholder="Password">
           <button type="submit">Submit</button>
           <a href="./index.html" style="color: white;margin: 5px;">Not registerd? Sign up</a>
         </form>
